fix(landing): remove extra margin from bottom of page

--- a/src/styles/application/_installedAppsView.scss
+++ b/src/styles/application/_installedAppsView.scss
@@ -10,6 +10,7 @@
 }
 
 .app-installed-apps-view {
+  margin-bottom: 0;
   & .panel-title {
     background-color: $color-pf-white;
   }
