--- a/src/styles/application/_tutorialDashboard.scss
+++ b/src/styles/application/_tutorialDashboard.scss
@@ -16,6 +16,7 @@
 }
 
 .app-tutorial-dashboard {
+  margin-bottom: 0;
   background-color: $color-pf-black-150;
   & .panel-title {
     display: flex;
